--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -59,6 +59,35 @@
   "C_Cpp_Runner.useLinkTimeOptimization": false,
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
   "files.associations": {
-    "math.h": "c"
+    "math.h": "c",
+    "classes.h": "c",
+    "stdio.h": "c",
+    "unistd.h": "c",
+    "ftimage.h": "c",
+    "sdl.h": "c",
+    "stdint.h": "c",
+    "cstdlib": "c",
+    "gui.h": "c",
+    "sdl_ttf.h": "c",
+    "helper.h": "c",
+    "time.h": "c",
+    "stdlib.h": "c",
+    "bit": "c",
+    "cctype": "c",
+    "cmath": "c",
+    "compare": "c",
+    "concepts": "c",
+    "cstdarg": "c",
+    "cstdio": "c",
+    "cwchar": "c",
+    "type_traits": "c",
+    "limits": "c",
+    "new": "c",
+    "*.tcc": "c",
+    "cinttypes": "c",
+    "cstdint": "c",
+    "typeinfo": "c",
+    "config.h": "c",
+    "tloader.h": "c"
   }
 }
