final for now, i do not know how to fix the current major bug in the code.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -88,6 +88,7 @@
     "cstdint": "c",
     "typeinfo": "c",
     "config.h": "c",
-    "tloader.h": "c"
+    "tloader.h": "c",
+    "cstddef": "c"
   }
 }
